fixed: works overflow section

--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -552,6 +552,7 @@ body {
   justify-content: center;
   align-items: center;
   color: #333333;
+  overflow: hidden;
 }
 
 .works-header-section > h1 {
@@ -573,6 +574,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
     padding: 10rem 0 4rem 0;
 }
 
